tests/NormalTests/paczka1/small_fuzzy/38738955.err
Error in line 3: oTVwuOY S445 81,1
Error in line 8: oTVwuOY S133 88,3
Error in line 10: pF2dhvMe S133 84,37
Error in line 2: pF2dhvMe S133 48,1
